# argus

./: .gitignore  CMakeLists.txt  README.md
libs/engine/: amd.cxx  nvidia.cxx  nvidia.hxx
src/: decoder.cxx  decoder.hxx  encoder.cxx  encoder.hxx  engine.cxx  engine.hxx  image.cxx  live.cxx  live.hxx  main.cxx  postprocess.cxx  postprocess.hxx  preprocess.cxx  preprocess.hxx  server.cxx  server.hxx
utils/: cuda.cxx  cuda.hxx  ffmpeg_utils.cxx  ffmpeg_utils.hxx  logger.cxx  logger.hxx  streams.cxx  streams.hxx
